Actually deleted data

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ steering-visualisation/steer_output.csv
 blinking-rate-detection/participant 1
 blinking-rate-detection/participant 2
 blinking-rate-detection/participant 3
+blinking-rate-detection/__pycache__
