finished folder structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 seatbelt-unit/Data
+seatbelt-unit/main.asv
 steering-visualisation/steer_output.csv
 blinking-rate-detection/participant 1
 blinking-rate-detection/participant 2
