Documented ecg_idx

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 seatbelt-unit/Data
 seatbelt-unit/main.asv
+seatbelt-unit/idx_lst.txt
 steering-visualisation/steer_output.csv
 blinking-rate-detection/participant 1
 blinking-rate-detection/participant 2
